test/litest.h
@@ -237,6 +237,7 @@ enum litest_device_type {
 	LITEST_GPIO_KEYS,
 	LITEST_IGNORED_MOUSE,
 	LITEST_WACOM_MOBILESTUDIO_PRO_16_PAD,
+	LITEST_THINKPAD_EXTRABUTTONS,
 };
 
 enum litest_device_feature {
